--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="Assets/css/bootstrap.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: aliceblue;">
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">
+            <p class="mb-0">Augusto Omena</p>
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,44 +23,31 @@
                   <span class="visually-hidden">(current)</span>
                 </a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                <div class="dropdown-menu">
-                  <a class="dropdown-item" href="#">Action</a>
-                  <a class="dropdown-item" href="#">Another action</a>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Separated link</a>
-                </div>
-              </li>
+
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-sm-2" type="search" placeholder="Search">
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-            </form>
           </div>
         </div>
       </nav>
+
+      <br style="margin-top: 100px;">
+
       <figure class="text-center mt-5 mb-5" >
         <blockquote class="blockquote">
-          <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+          <p class="mb-0">IT'S MY LIFE <BR> IT'S NOW OR NEVER</p>
         
         </blockquote>
         <figcaption class="blockquote-footer">
-          Someone famous in <cite title="Source Title">Source Title</cite>
+          <cite title="Source Title">Bon Jovi</cite>
         </figcaption>
-        <button type="button" class="btn btn-primary btn-lg" onclick="location.href='https://wa.me/5524981021079'">Me contate via whatsapp</button>
       </figure>
 
+      <br style="margin-top: 20px;">
+
+      <figure class="text-center mt-5 mb-5" >
+        <blockquote class="blockquote">
+          <h2>Colections</h2>
+        </blockquote>
+      </figure>
 
       
 
@@ -67,25 +56,15 @@
         <div class="row">
           <div class="col">
             <div class="col">
-                <div class="card mb-3">
-                    <h3 class="card-header">Série Cores</h3>
-                    <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <h6 class="card-subtitle text-muted">Support card subtitle</h6>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                <div class="card mb-3 ">
+                    <h3 class="card-header bg-light">Série Cores</h3>
+                    <img src="Assets/imgs/Capas/SerieCores.png" class="d-block user-select-none" width="100%" height="100%" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                       <rect width="100%" height="100%" fill="#868e96"></rect>
-                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
+                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Adriana Calcanhotto</text>
+                    </img>
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                    <div class="card-body">
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
-                    </div>
-                    <div class="card-footer text-muted">
-                      2 days ago
+                      <h5 class="card-title">Series about colors</h5>
+                      <h6 class="card-subtitle text-muted">Be</h6>
                     </div>
                   </div>
               </div>
@@ -93,24 +72,14 @@
           <div class="col">
             <div class="col">
                 <div class="card mb-3">
-                    <h3 class="card-header">Série Abstrata</h3>
-                    <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <h6 class="card-subtitle text-muted">Support card subtitle</h6>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                    <h3 class="card-header bg-light">Série Abstrata</h3>
+                    <img src="Assets/imgs/Capas/Abstrato.png" class="d-block user-select-none" width="100%" height="100%" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                       <rect width="100%" height="100%" fill="#868e96"></rect>
-                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
+                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Vortice Inspiron</text>
+                    </img>
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                    <div class="card-body">
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
-                    </div>
-                    <div class="card-footer text-muted">
-                      2 days ago
+                      <h5 class="card-title">Abstract Series</h5>
+                      <h6 class="card-subtitle text-muted">Abstract</h6>
                     </div>
                   </div>
               </div>
@@ -118,24 +87,14 @@
           <div class="col">
             <div class="col">
                 <div class="card mb-3">
-                    <h3 class="card-header">Fotografias</h3>
-                    <div class="card-body">
-                      <h5 class="card-title">Special title treatment</h5>
-                      <h6 class="card-subtitle text-muted">Support card subtitle</h6>
-                    </div>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                    <h3 class="card-header bg-light">Fotografias</h3>
+                    <img src="Assets/imgs/Capas/Fotos.png" class="d-block user-select-none" width="100%" height="100%" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                       <rect width="100%" height="100%" fill="#868e96"></rect>
-                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-                    </svg>
+                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Late Afternoon Texture</text>
+                    </img>
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    </div>
-                    <div class="card-body">
-                      <a href="#" class="card-link">Card link</a>
-                      <a href="#" class="card-link">Another link</a>
-                    </div>
-                    <div class="card-footer text-muted">
-                      2 days ago
+                      <h5 class="card-title">Textured sky</h5>
+                      <h6 class="card-subtitle text-muted">Photographs</h6>
                     </div>
                   </div>
               </div>
