Creating the new index

--- a/index.html
+++ b/index.html
@@ -4,102 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="Assets/css/bootstrap.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="Assets/css/style.css">
 </head>
-<body style="background-color: aliceblue;">
-    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <p class="mb-0">Augusto Omena</p>
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarColor02">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Home
-                  <span class="visually-hidden">(current)</span>
-                </a>
-              </li>
-
-            </ul>
-          </div>
+<body>
+    <section class="flex">
+        <div>
+          <img src="Assets/imgs/Capas/SerieCores.png">
+          <p>Série Cores</p>
         </div>
-      </nav>
-
-      <br style="margin-top: 100px;">
-
-      <figure class="text-center mt-5 mb-5" >
-        <blockquote class="blockquote">
-          <p class="mb-0">IT'S MY LIFE <BR> IT'S NOW OR NEVER</p>
-        
-        </blockquote>
-        <figcaption class="blockquote-footer">
-          <cite title="Source Title">Bon Jovi</cite>
-        </figcaption>
-      </figure>
-
-      <br style="margin-top: 20px;">
-
-      <figure class="text-center mt-5 mb-5" >
-        <blockquote class="blockquote">
-          <h2>Colections</h2>
-        </blockquote>
-      </figure>
-
-      
-
-
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <div class="col">
-                <div class="card mb-3 ">
-                    <h3 class="card-header bg-light">Série Cores</h3>
-                    <img src="Assets/imgs/Capas/SerieCores.png" class="d-block user-select-none" width="100%" height="100%" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                      <rect width="100%" height="100%" fill="#868e96"></rect>
-                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Adriana Calcanhotto</text>
-                    </img>
-                    <div class="card-body">
-                      <h5 class="card-title">Series about colors</h5>
-                      <h6 class="card-subtitle text-muted">Be</h6>
-                    </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col">
-            <div class="col">
-                <div class="card mb-3">
-                    <h3 class="card-header bg-light">Série Abstrata</h3>
-                    <img src="Assets/imgs/Capas/Abstrato.png" class="d-block user-select-none" width="100%" height="100%" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                      <rect width="100%" height="100%" fill="#868e96"></rect>
-                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Vortice Inspiron</text>
-                    </img>
-                    <div class="card-body">
-                      <h5 class="card-title">Abstract Series</h5>
-                      <h6 class="card-subtitle text-muted">Abstract</h6>
-                    </div>
-                  </div>
-              </div>
-          </div>
-          <div class="col">
-            <div class="col">
-                <div class="card mb-3">
-                    <h3 class="card-header bg-light">Fotografias</h3>
-                    <img src="Assets/imgs/Capas/Fotos.png" class="d-block user-select-none" width="100%" height="100%" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                      <rect width="100%" height="100%" fill="#868e96"></rect>
-                      <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Late Afternoon Texture</text>
-                    </img>
-                    <div class="card-body">
-                      <h5 class="card-title">Textured sky</h5>
-                      <h6 class="card-subtitle text-muted">Photographs</h6>
-                    </div>
-                  </div>
-              </div>
-          </div>
+        <div>
+          <img src="Assets/imgs/Capas/Abstrato.png">
+          <p>Série Cores</p>
         </div>
-      </div>
+        <div>
+          <img src="Assets/imgs/Capas/Fotos.png">
+          <p>Série Cores</p>
+        </div>
+        <div>
+          <img src="Assets/imgs/Capas/Fotos.png">
+          <p>Série Cores</p>
+        </div>
+        <div>
+          <img src="Assets/imgs/Capas/Abstrato.png">
+          <p>Série Cores</p>
+        </div>
+        <div>
+          <img src="Assets/imgs/Capas/SerieCores.png">
+          <p>Série Cores</p>
+        </div>
+      </section>
 </body>
 </html>
