Creating Header, and adjusts in images section.

--- a/index.html
+++ b/index.html
@@ -7,30 +7,30 @@
     <link rel="stylesheet" href="Assets/css/style.css">
 </head>
 <body>
+
+  <header class="header">
+    <a href="/">Logo</a>
+    <nav class="options">
+      <ul>
+        <li><a  href="/">Sobre</a></li>
+        <li><a  href="/">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+    <h1></h1>
     <section class="flex">
         <div>
           <img src="Assets/imgs/Capas/SerieCores.png">
-          <p>Série Cores</p>
         </div>
         <div>
           <img src="Assets/imgs/Capas/Abstrato.png">
-          <p>Série Cores</p>
         </div>
         <div>
           <img src="Assets/imgs/Capas/Fotos.png">
-          <p>Série Cores</p>
         </div>
         <div>
           <img src="Assets/imgs/Capas/Fotos.png">
-          <p>Série Cores</p>
-        </div>
-        <div>
-          <img src="Assets/imgs/Capas/Abstrato.png">
-          <p>Série Cores</p>
-        </div>
-        <div>
-          <img src="Assets/imgs/Capas/SerieCores.png">
-          <p>Série Cores</p>
         </div>
       </section>
 </body>
