Melhoria no tamanho máximo do header

--- a/index.html
+++ b/index.html
@@ -8,30 +8,44 @@
 </head>
 <body>
 
-  <header class="header">
-    <a href="/">Logo</a>
-    <nav class="options">
-      <ul>
-        <li><a  href="/">Sobre</a></li>
-        <li><a  href="/">Contato</a></li>
-      </ul>
-    </nav>
-  </header>
+  <div class="corPrincipal">
+    <div class="larguraPadrao">
+      <header class="header">
+        <a href="/">Logo</a>
+        <nav class="options">
+          <ul>
+            <li><a  href="/">Sobre</a></li>
+            <li><a  href="/">Contato</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+  </div>
+
 
     <h1></h1>
     <section class="flex">
-        <div>
-          <img src="Assets/imgs/Capas/SerieCores.png">
-        </div>
-        <div>
-          <img src="Assets/imgs/Capas/Abstrato.png">
-        </div>
-        <div>
-          <img src="Assets/imgs/Capas/Fotos.png">
-        </div>
-        <div>
-          <img src="Assets/imgs/Capas/Fotos.png">
-        </div>
-      </section>
+      <div class="item">
+          <img src="Assets/imgs/Capas/SerieCores.png" alt="Imagem 1">
+          <p>Série Cores</p>
+      </div>
+      <div class="item">
+          <img src="Assets/imgs/Capas/Abstrato.png" alt="Imagem 2">
+          <p>Série Abstrata</p>
+      </div>
+      <div class="item">
+          <img src="Assets/imgs/Capas/Fotos.png" alt="Imagem 3">
+          <p>Jo marques <br> Augusto Omena</p>
+      </div>
+      <div class="item">
+          <img src="Assets/imgs/Capas/Fotos.png" alt="Imagem 4">
+          <p>Fotografias</p>
+      </div>
+  </section>
+
+<img src="Assets/imgs/Capas/EuPintando.jpg" alt="imagem 5">
+
+
+
 </body>
 </html>
