Adding a section with a background image.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     </div>
   </div>
 
+  <br><br>
 
     <h1></h1>
     <section class="flex">
@@ -43,7 +44,22 @@
       </div>
   </section>
 
-<img src="Assets/imgs/Capas/EuPintando.jpg" alt="imagem 5">
+  <br><br>
+
+<!-- imagem eu pintando -->
+ <div style="position: relative;">
+    <img class="imagemFundo" src="Assets/imgs/Capas/EuPintando.jpg" alt="imagem 5">
+    <div class="maisEscuro"></div>
+    <div class="posicaoTexto">
+        <div class="larguraPadrao">
+        <h1 style="color: #fff; font-size: 50px;">Meu Trabalho</h1>
+        <p style="color: #fff; ">Feito usando os melhores materiais</p>
+        <button class="botaoTransparente">Sobre a Arte</button>
+        </div>
+    </div>
+</div>
+
+<br><br>
 
 
 
