Header in Chuck Black Art Style.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <div class="corPrincipal">
+  <!-- <div class="">
     <div class="larguraPadrao">
       <header class="header">
         <a href="/">Logo</a>
@@ -20,7 +20,29 @@
         </nav>
       </header>
     </div>
+  </div> -->
+
+  <div style="position: relative;">
+    <img style="width: 100%; max-height: 650px; object-fit: cover;" src="Assets/imgs/Capas/EuNaPraia.jpg" alt="imagem 5">
+    <div class="maisEscuro"></div>
+
+    <div style="top: 0" class="posicaoTexto">
+        <div class="larguraPadrao">
+          <header class="header">
+            <a href="/">Logo</a>
+            <nav class="options">
+              <ul>
+                <li><a  href="/">Sobre</a></li>
+                <li><a  href="/">Contato</a></li>
+              </ul>
+            </nav>
+          </header>
+        </div>
+    </div>
+    
   </div>
+
+
 
   <br><br>
 
