--- a/index.html
+++ b/index.html
@@ -81,9 +81,48 @@
     </div>
 </div>
 
-<br><br>
+  <!-- Bottom -->
+  <div class="fundo-Branco">
+    <div class="social-icons social-position">
+      <a href="mailto:augusto.n.omena@gmail.com" target="_blank" title="Email">
+        <img src="https://cdn-icons-png.flaticon.com/128/542/542638.png" alt="Ícone de Email"></a>
+      <a href="https://instagram.com/augusto.omena?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" title="Instagram">
+        <img src="https://cdn-icons-png.flaticon.com/128/1384/1384031.png" alt="Ícone do LinkedIn"></a>
+      <a href="https://www.linkedin.com/in/augusto-omena-169535255/" target="_blank" title="LinkedIn">
+        <img src="https://cdn-icons-png.flaticon.com/128/3128/3128219.png" alt="Ícone do Instagram"></a>
+      <a href="https://github.com/AugustoOmena" target="_blank" title="GitHub">
+        <img src="https://cdn-icons-png.flaticon.com/128/733/733609.png" alt="Ícone do GitHub"></a>
+    </div>
+    <div>
+      <br>
+    </div>
+
+    <div class="container text-center">
+
+      <div class="container text-center">
+        <div class="row">
+            <div class="col">
+                <h4 class="rosa">Contato</h4>
+                <p>55+ 24981021079</p>
+                <p>augusto.n.omena@gmail.com</p>
+            </div>
+    
+            <div class="col">
+                <h4 class="rosa">Localização</h4>
+                <p>Angra dos Reis - RJ</p>
+            </div>
+        </div>
+    </div>
 
 
+      <hr>
+      <div class="row">
+        <div class="col-sm">
+          Augusto do Nascimento Omena
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
