--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <img class="imagemFundo" src="Assets/imgs/Capas/EuPintando.jpg" alt="imagem 5">
     <div class="maisEscuro"></div>
     <div class="posicaoTexto">
-        <div style="margin-left: 10px;" class="larguraPadrao">
+        <div class="larguraPadrao ajusteLargura">
         <h1 style="color: #fff; font-size: 50px;">Meu Trabalho</h1>
         <p style="color: #fff; ">Feito usando os melhores materiais</p>
         <button class="botaoTransparente">Sobre a Arte</button>
