Adding some items to adapt later.

--- a/index.html
+++ b/index.html
@@ -39,9 +39,95 @@
           </header>
         </div>
     </div>
-    
   </div>
 
+  <div class="centro">
+    <div class="larguraPadrao">
+      <p></p>
+    </div>
+  </div>
+
+  <section class="flex">
+    <div class="item" style="background-color: rgb(174, 174, 174); height: 250px; border-radius: 2px; text-align: center; padding: 30px; text-align: justify;">
+        <h6>Sobre a empresa</h6>
+        <h6>A internet como conhecemos hoje, é fruto de uma evolução constante e gradativa desde sua invenção. Desde seus protocolos até suas linguagens de desenvolvimento sofreram tais mudanças e com certeza, um dos principais componentes dessa grande estrutura mundial é o HTML. Mas espera ai, não iamos falar sobre CSS?
+          Pois bem, uma coisa leva a outra. Vejamos o começo de tudo, a linguagem de marcação surgindo para solucionar o problema de um cientista que queria uma forma de divulgar seus artigos na rede, para isso, ele criou  algo simples, restrito a comunidade científica e usado apenas para estrutura o conteúdo e exibir um texto de forma coerente.
+          Mas a linguagem usada pelos cientistas se tornou padrão da Internet, e com o tempo, passou a ser mais testada. Todos queriam imagens, cores e designer avançado. E o HTML antigo não suportava isso, então foram adicionadas novas tags. Isso solucionou o problema por um tempo, mas começou a surgir outro grande problema. Com os novos recursos, designers e desenvolvedores de websites, abusavam da criatividade e enchiam suas paginas de fontes e estilos visuais, mas para alterar uma linha até que era mais simples, porem quando se queria mudar a cor de um link, por exemplo, e esse link estava em 300 paginas diferentes, era trabalho manual mesmo, um por um, tag por tag.
+          Misturar estilo e estrutura não era mais interessante, e foi assim que em 1995, Håkon Wium Lie e Bert Bos apresentaram a proposta do CSS(Cascading Style Sheets) que logo foi apoiada pela W3C. A idéia geral era, utilizar HTML somente para estruturar o website e a tarefa de apresentação fica com o CSS disposto em um arquivo separado .css ou no proprio HTML demarcado pelas tags .
+          Os conceitos de estilização com css em sua maioria ainda não são seguidos totalmente, devido a problemas de compatibilidade entre browsers e muitas vezes até falta de um conhecimento maior dos desenvolvedores, mas a W3C trabalha nos standards, que visam tornar o desenvolvimento padrão e tambem exigir dos navegadores uma interpretação adequada e compatível.</h6>
+    </div>
+  </section>
+
+  <section class="flex">
+    <div class="item" style="background-color: rgb(174, 174, 174); height: 250px; border-radius: 2px; text-align: center; padding: 30px; text-align: justify;">
+        <h6>Sobre a empresa</h6>
+        <h6>A internet como conhecemos hoje, é fruto de uma evolução constante e gradativa desde sua invenção. Desde seus protocolos até suas linguagens de desenvolvimento sofreram tais mudanças e com certeza, um dos principais componentes dessa grande estrutura mundial é o HTML. Mas espera ai, não iamos falar sobre CSS?
+          Pois bem, uma coisa leva a outra. Vejamos o começo de tudo, a linguagem de marcação surgindo para solucionar o problema de um cientista que queria uma forma de divulgar seus artigos na rede, para isso, ele criou  algo simples, restrito a comunidade científica e usado apenas para estrutura o conteúdo e exibir um texto de forma coerente.
+          Mas a linguagem usada pelos cientistas se tornou padrão da Internet, e com o tempo, passou a ser mais testada. Todos queriam imagens, cores e designer avançado. E o HTML antigo não suportava isso, então foram adicionadas novas tags. Isso solucionou o problema por um tempo, mas começou a surgir outro grande problema. Com os novos recursos, designers e desenvolvedores de websites, abusavam da criatividade e enchiam suas paginas de fontes e estilos visuais, mas para alterar uma linha até que era mais simples, porem quando se queria mudar a cor de um link, por exemplo, e esse link estava em 300 paginas diferentes, era trabalho manual mesmo, um por um, tag por tag.
+          Misturar estilo e estrutura não era mais interessante, e foi assim que em 1995, Håkon Wium Lie e Bert Bos apresentaram a proposta do CSS(Cascading Style Sheets) que logo foi apoiada pela W3C. A idéia geral era, utilizar HTML somente para estruturar o website e a tarefa de apresentação fica com o CSS disposto em um arquivo separado .css ou no proprio HTML demarcado pelas tags .
+          Os conceitos de estilização com css em sua maioria ainda não são seguidos totalmente, devido a problemas de compatibilidade entre browsers e muitas vezes até falta de um conhecimento maior dos desenvolvedores, mas a W3C trabalha nos standards, que visam tornar o desenvolvimento padrão e tambem exigir dos navegadores uma interpretação adequada e compatível.</h6>
+    </div>
+  </section>
+
+
+
+
+  <section class="flex">
+    <div class="item" style="height: 680px; border-radius: 2px; text-align: center; padding: 30px; text-align: justify;">
+        <h6>Horário de Atendimento</h6>
+        <table>
+          <thead>
+            <tr>
+              <th>Hora</th>
+              <th>Quem fala</th>
+              <th>Temática</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+                <td>9h20 às 9h40</td>
+                <td>André Pimenta</td>
+                <td>Transformação Digital e Ecossistema de Inovação de Angra</td>
+              </tr>
+            <tr>
+                <td>9h40 às 10h</td>
+                <td>André Pimenta<br>
+                    Rogério Pontes<br>
+                    Samuel Teodoro Ferreira<br>
+                    Matheus Fernandes da Silva
+                </td>
+                <td>Lançamentos SEI e SIGAweb e Parque Tecnológico Virtual</td>
+              </tr>
+            <tr>
+              <td>10h às 10h30</td>
+              <td>Mauro Farias - Sec. de Estado de Transformação Digital</td>
+              <td>Transformação Digital no Estado do RJ</td>
+            </tr>
+            <tr>
+            <tr>
+                <td>11h30 às 12h10</td>
+                <td>Edmar Moraes</td>
+                <td>Ilhahub - O IlhaHub de Inovação é o hub de empreendedorismo,
+                    ciência, tecnologia e inovação em Ilhabela, focado em soluções
+                    Amazônia Azul
+                </td>
+            </tr>
+
+            <tr>
+                <td>18h às 18h30</td>
+                <td>Ruppert Hahnstadt</td>
+                <td>Diretor na FDA ALLERGENIC GROUP<br>
+                    Empreendedorismo com Inovação em Big
+                </td>
+            </tr>
+            <tr>
+                <td>19h</td>
+                <th colspan="2">Encerramento</th>
+            </tr>
+          </tbody>
+        </table>
+    </div>
+  </section>
 
 
   <br><br>
@@ -113,7 +199,6 @@
             </div>
         </div>
     </div>
-
 
       <hr>
       <div class="row">
